# ros_drone_rl

./: .gitignore
.cache/clangd/index/: Accelerometer.cpp.6AC2E2E995431284.idx  Accelerometer.hpp.659F54D1B5E47D77.idx  AdsbConflict.cpp.45132B7F3D683509.idx  AdsbConflict.h.AECBE33D995AEBA2.idx  AdsbConflictTest.cpp.458CE6E09ED7E2A0.idx  AdsbConflictTest.h.60978331E5167FB6.idx  AlphaFilter.hpp.98938E25A2AE950B.idx  AlphaFilterTest.cpp.982790ACA17243AE.idx  Array.hpp.22B7873F9363FB21.idx  AxisAngle.hpp.7561BD3FA0AF8670.idx  Barometer.cpp.24E3A492F10A9172.idx  Barometer.hpp.D0E08A706EFA63D7.idx  BezierN.cpp.EA0CCC6B4037DCCD.idx  BezierN.hpp.210080C9A04CCD22.idx  BezierNTest.cpp.0AE959BF9517E0AF.idx  BezierQuad.cpp.2765E19D8FC94804.idx  BezierQuad.hpp.771A3716CD53C626.idx  Bitset.hpp.FBF7C6B5891EF47D.idx  Block.cpp.78D3CB11B81457DB.idx  Block.hpp.1085827ADE0EBE44.idx  BlockDelay.hpp.90DE9CF3817EA4E5.idx  BlockDerivative.cpp.9C43039F931E1D15.idx  BlockDerivative.hpp.3AD175873322D128.idx  BlockHighPass.cpp.525578C7167A7CBB.idx  BlockHighPass.hpp.A18C3F114422B456.idx  BlockIntegral.cpp.E017B05DD0F10C3D.idx  BlockIntegral.hpp.4913CEB1277533F7.idx  BlockIntegralTrap.cpp.C806900D0F37BC3C.idx  BlockIntegralTrap.hpp.41F96D6EE909E6CA.idx  BlockLimit.cpp.40EC8B81BCFE9B35.idx  BlockLimit.hpp.DB0F61EF882303D5.idx  BlockLimitSym.cpp.51AA7D8C8084391F.idx  BlockLimitSym.hpp.E64CF68CCBBBEE56.idx  BlockLowPass.cpp.1BCEEFA1B60FB50C.idx  BlockLowPass.hpp.236B9CE834DD51EA.idx  BlockLowPass2.cpp.FAB2BE074FB6DE38.idx  BlockLowPass2.hpp.C8A53AEFD801C826.idx  BlockLowPassVector.hpp.B8CBAAA2B5B22BAF.idx  BlockOutput.hpp.980D4BB5D4514D78.idx  BlockP.hpp.A677609A4A3CC267.idx  (+387 more)
src/drone_control/: CMakeLists.txt  package.xml  setup.py
src/drone_interfaces/: CMakeLists.txt  package.xml
src/drone_interfaces/action/: LandOnPlatform.action
src/drone_interfaces/msg/: DroneState.msg  PlatformState.msg
src/drone_interfaces/srv/: EnablePlatformMotion.srv  SetHoverAltitude.srv
src/drone_rl_agent/: package.xml  setup.cfg  setup.py
src/drone_rl_agent/drone_rl_agent/: env.py  training.py  wrappers.py
src/drone_rl_agent/launch/: drone_rl_agent.launch.py
src/drone_sim_world/: CMakeLists.txt  package.xml
tb/PPO_1/: events.out.tfevents.1747690821.sozureke.48791.0
tb/PPO_2/: events.out.tfevents.1747922928.sozureke.47943.0
tb/PPO_3/: events.out.tfevents.1747923978.sozureke.50004.0
tb/PPO_4/: events.out.tfevents.1747924264.sozureke.51723.0
tb/PPO_5/: events.out.tfevents.1747924744.sozureke.53162.0
tb/PPO_6/: events.out.tfevents.1747925372.sozureke.61902.0
(+9 files in other folders)
