<?xml version="1.0"?>
<package format="3">
  <name>drone_rl_agent</name>
  <version>0.1.0</version>
  <description>RL-agent landing a drone on a moving platform</description>
  <maintainer email="sozure.synergy@gmail.com">sozureke</maintainer>
  <license>MIT</license>

  <!-- buildtool -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- build/runtime -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>drone_control</exec_depend>
  <exec_depend>drone_interfaces</exec_depend>
  <exec_depend>gym</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>stable_baselines3</exec_depend>

  <!-- тесты, если нужны -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
